# inp-emulator

./: .env.example  .gitignore  INSTALL.md  README.md  docs.md  package-lock.json  package.json  pyproject.toml  run_url_tests.sh  test_urls.sh  urls.csv  urls.txt
config/: aws.yaml  config.yaml
docs/: AWS-DEPLOYMENT.md
docs/deployment/: k8s-deployment.yaml
docs/deployment/aws/: cloudformation-template.yaml
scripts/: deploy-aws.sh  start.sh
src/inp_emulator/: __init__.py  book1.csv  main.py
src/inp_emulator/config/: settings.py
src/inp_emulator/core/: element_discovery.py  interaction_engine.py  orchestrator.py  page_analyzer.py
src/inp_emulator/interfaces/: playwright_client.py
src/inp_emulator/testing/: __init__.py  test_runner.py
src/inp_emulator/utils/: data_export.py  logger.py
src/inputer/: __init__.py  main.py
src/inputer/config/: settings.py
src/inputer/core/: element_discovery.py  interaction_engine.py  orchestrator.py  page_analyzer.py  performance_analyzer.py
src/inputer/interfaces/: __init__.py  bedrock_client.py  llm_client.py  playwright_client.py
src/inputer/testing/: mock_llm.py  test_runner.py
src/inputer/utils/: data_export.py  logger.py
test_results/: inputer_report_20251003_082751.csv  inputer_report_20251003_082751.html  inputer_report_20251003_082751.json  inputer_report_20251003_082751_executive_summary.csv  inputer_report_20251003_082751_summary.md
