[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inputer"]

[project]
name = "inputer-performance-monitor"
version = "1.0.0"
description = "Automated INP and performance monitoring using Playwright and AI"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Inputer Performance Monitor Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]
keywords = [
    "performance",
    "inp",
    "chrome-devtools",
    "automation",
    "testing",
    "web-performance",
    "core-web-vitals"
]
requires-python = ">=3.13"

dependencies = [
    # Browser automation
    "playwright>=1.40.0",
    # HTTP client
    "httpx>=0.25.0",
    # Core framework dependencies
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    # Data processing and analysis
    "pandas>=2.1.4",
    "numpy>=1.26.0",
    # Visualization and reporting
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # Logging and monitoring
    "structlog==23.2.0",
    "python-json-logger==2.0.7",
    # Configuration management
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    # CLI and user interface
    "click==8.1.7",
    "rich==13.7.0",
    # Utilities and reliability
    "tenacity==8.2.3",
    # AWS dependencies (for Bedrock)
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",

    # Code quality
    "black==23.11.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.12.0",

    # Pre-commit hooks
    "pre-commit==3.6.0",

    # Documentation
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.8",
]

aws = [
    # Enhanced AWS support
    "aioboto3==12.3.0",
    "aws-lambda-powertools==2.27.0",
]

testing = [
    # Enhanced testing capabilities
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-xdist==3.5.0",  # Parallel testing
    "factory-boy==3.3.0",   # Test data factories
    "responses==0.24.1",    # HTTP request mocking
]

monitoring = [
    # Enhanced monitoring and metrics
    "prometheus-client==0.19.0",
    "grafana-api==1.0.3",
    "datadog==0.48.0",
]

[project.scripts]
inputer = "inputer.main:main"
inputer-test = "inputer.testing.test_runner:main"

[project.urls]
Homepage = "https://github.com/your-org/inputer"
Documentation = "https://github.com/your-org/inputer/blob/main/README.md"
Repository = "https://github.com/your-org/inputer"
Issues = "https://github.com/your-org/inputer/issues"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "structlog.*",
    "rich.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/python",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "aws: marks tests that require AWS credentials",
    "llm: marks tests that require LLM services",
]

[tool.coverage.run]
source = ["src/python"]
omit = [
    "*/tests/*",
    "*/testing/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.ruff.isort]
known-first-party = ["src"]
